// Copyright 2022 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package vm_leaser.api;

option go_package = "infra/vm_leaser/api;vmleaserpb";

service VmLeaserService {
  rpc LeaseVm(LeaseVmRequest) returns (LeaseVmResponse) {};
  rpc ExtendLease(ExtendLeaseRequest) returns (ExtendLeaseResponse) {};
  rpc ReleaseVm(ReleaseVmRequest) returns (ReleaseVmResponse) {};
}

message LeaseVmRequest {}

message LeaseVmResponse {
  string lease_id = 1;
}

message ExtendLeaseRequest {
  string lease_id = 1;
}

message ExtendLeaseResponse {}

message ReleaseVmRequest {
  string lease_id = 1;
}

message ReleaseVmResponse {}
